refactor: :recycle: updating activate to active, and agency to adOpsTeam
