# src/ts/routes/register.ts
@@ -14,22 +14,22 @@ const register = (app: { [key: string]: any }): void => {
 
 			const apiResponse = new ApiResponse();
 
-			let agency = '';
+			let adOpsTeam = '';
 
-			if (req.agency && req.body.permission === 'user') {
-				agency = req.agency;
-			} else if (req.body.agency && req.body.permission === 'agencyOwner') {
-				agency = req.body.agency;
+			if (req.adOpsTeam && req.body.permission === 'user') {
+				adOpsTeam = req.adOpsTeam;
+			} else if (req.body.adOpsTeam && req.body.permission === 'adOpsManager') {
+				adOpsTeam = req.body.adOpsTeam;
 			} else if (
-				!req.agency &&
-				!req.body.agency &&
-				(req.body.permission === 'user' || req.body.permission === 'agencyOwner')
+				!req.adOpsTeam &&
+				!req.body.adOpsTeam &&
+				(req.body.permission === 'user' || req.body.permission === 'adOpsManager')
 			) {
 				validationErrors.push({
 					param: 'email',
-					value: req.body.agency,
+					value: req.body.adOpsTeam,
 					location: 'body',
-					msg: 'Não foi possível encontrar a agência.',
+					msg: 'Não foi possível encontrar o adOpsTeam.',
 				});
 			}
 
@@ -41,7 +41,15 @@ const register = (app: { [key: string]: any }): void => {
 				return;
 			}
 
-			const newUser = new User('', req.body.permission, req.company, req.body.email, true, agency, req.body.password);
+			const newUser = new User(
+				'',
+				req.body.permission,
+				req.company,
+				req.body.email,
+				true,
+				adOpsTeam,
+				req.body.password
+			);
 
 			const userDAO = new UserDAO();
 			userDAO
